tests/baselines/reference/arithAssignTyping.errors.txt
==== tests/cases/compiler/arithAssignTyping.ts (13 errors) ====
    class f { }
    
    f += ''; // error
    ~
!!! error TS2012: Cannot convert 'string' to 'typeof f':
!!! 	Type 'String' is missing property 'prototype' from type 'typeof f'.
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    f += 1; // error
    ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    f -= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    f *= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    f /= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    f %= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    f &= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    f |= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    f <<= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    f >>= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    f >>>= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    f ^= 1; // error
    ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.